# RaDiSh

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
assets/wheelframes/: basic.json
config/: application.json
docs/: driving_model_mathematics.md  driving_model_mathematics.txt  plan_engine.md
gui/: app.py  widgets.py
gui/tabs/vehicle_design/: component_designer.py  direct_control.py  panda3d_renderer.py  tab-Swarnendu’s MacBook Pro.py  tab.py  vehicle_config.py  vehicle_info.py  viewport-Swarnendu’s MacBook Pro.py  viewport.py  wheel_frame_section-Swarnendu’s MacBook Pro.py  wheel_frame_section.py
simulation/: automatic.py  brakes.py  engine.py  mass.py  transmission.py
tests/: test_dynamics.py  test_lateral_skid.py  test_rendering.py  test_rpm_trace.py  test_steering_drive.py  test_wheel_rpm_slip.py
