[project]
name = "radish"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.3.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "numpy>=2.4.6",
    "opencv-python>=5.0.0.93",
    "panda3d==1.10.16",
    "panda3d-gltf>=1.0.0",
    "panda3d-simplepbr>=0.11.0",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pygame>=2.6.1",
    "pyqt6==6.7.1",
    "pyqt6-qt6==6.7.1",
    "pyqt6-sip>=13.6",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "shimmy>=2.0.1",
    "sounddevice>=0.5.5",
    "stable-baselines3>=2.9.0",
    "tensorboard>=2.21.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "torchvision>=0.17.0",
    "tqdm>=4.68.4",
    "wandb>=0.28.0",
]
